Fix bug #40913 PDO::PARAM_LOB does not bind to a stream for fetching a BLOB (SQLite)